			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: not_empty_list --> non_empty_list.  Ulrich Neumerkel.

  * library(error): fixed errors for lists.  Ulrich Neumerkel.

  * MANUAL: Added glossary items to index.  Ulrich Neumerkel.

  * ENHANCED: Faster implementation of ground/1 using less memory.
    Ulrich Neumerkel.

  * FIXED: recent patch of length/2 caused error in length(X, a). 
    Ulrich Neumerkel.

===================================
VERSION 5.6.40 (September 05, 2007)
===================================

  * ADDED: type list to must_be/2.   Ulrich Neumerkel.

  * FIXED: read foo.%comment (no space between . and %) when processing
    comments.

  * ENHANCED: efficiency of length/2.  Ulrich Neumerkel.

  * FIXED: handling of cyclic terms in is_list/1, =../2, write/1, sort/2
    and friends. Ulrich Neumerkel.

  * FIXED: properly handle occurs_check=error case in dif/2.
    Ulrich Neumerkel and Tom Schrijvers.

  * MODIFIED: Replaced prompt_alternatives_no_bindings flag with
    prompt_alternatives_on with the values groundness and determinism. 
    Default is determinism.  After discussions on mailinglist,
    comp.lang.prolog and direct by mail.

  * FIXED: Properly handle occurs_check flag in unifiable/3.  Ulrich Neumerkel.

  * MODIFIED: The symbols in the range 128..255 are now considered SOLO
    characters, compatible to the documentation.   Ulrich Neumerkel.

  * FIXED: Various issues read dealing with Unicode and backquoted
    strings.   Ulrich Neumerkel.

  * ADDED: experimental --pldoc[=port] option to start PlDoc before loading
    an application as in "pl --pldoc -s myprogram.pl"

  * ADDED: library(clpfd) by Markus Triska.

  * FIXED: silently accept floats with illegal exponent.  Ulrich Neumerkel.
